--- a/css/style.scss
+++ b/css/style.scss
@@ -48,7 +48,7 @@ body {
 header {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     margin: 0 0 48px 0;
-    padding: 15px 0 14px;
+    padding: 13px 0 10px;
 
     @media screen and (max-width: $medium) {
         margin: 0 0 23px 0;
@@ -57,11 +57,8 @@ header {
     .logo-container {
         float: left;
 
-        @media screen and (max-width: $large) {
-            margin: 0 0 16px 0;
-        }
-
         @media screen and (max-width: $medium) {
+            margin: 0 0 12px 0;
             float: none;
             padding: 0;
         }
@@ -103,11 +100,16 @@ header {
         text-align: center;
         text-decoration: none;
 
+        &:hover {
+            background: #FFC940;
+        }
+
         @media screen and (max-width: $medium) {
             background: #FFF;
             border: 1px solid #FDB600;
             display: block;
             float: none;
+            padding: 8px 40px 10px;
             width: 100%;
         }
     }
@@ -187,6 +189,10 @@ main#article {
                     width: 100%;
                 }
 
+                @media screen and (max-width: $medium) {
+                    margin: 0 0 20px 0;
+                }
+
                 .article__author-profile {
                     @media screen and (max-width: $xlarge) {
                         float: left;
@@ -248,13 +254,13 @@ main#article {
                                 @media screen and (max-width: $medium) {
                                     font-size: 9px;
                                     line-height: 10px;
-                                    padding-top: 8px;
+                                    padding-top: 5px;
                                     padding-right: 0;
                                 }
 
                                 img {
                                     display: none;
-                                    padding: 0 0 0 5px;
+                                    padding: 0 0 3px 5px;
 
                                     @media screen and (max-width: $medium) {
                                         display: block;
@@ -290,6 +296,10 @@ main#article {
     
                 a {
                     color: #5184A1;
+
+                    strong {
+                        font-weight: 600;
+                    }
                 }
     
                 p {
@@ -324,6 +334,10 @@ main#article {
 
                     @media screen and (max-width: $medium) {
                         margin: 0 -16px 20px -16px;
+                        
+                        img {
+                            width: 100%;
+                        }
                     }
     
                     img {
@@ -376,6 +390,7 @@ main#article {
                         }
     
                         .property-wrapper {
+                            font-family: 'Source Sans Pro', sans-serif;
                             margin: 25px 0 0 0;
     
                             > a {
@@ -386,12 +401,16 @@ main#article {
                                 display: block;
                                 color: #25282B;
                                 font-size: 16px;
-                                font-weight: 600;
+                                font-weight: bold;
                                 line-height: 20px;
                                 margin: 0 0 10px 0;
                                 padding: 10px 24px 8px;
                                 text-align: left;
                                 text-decoration: none;
+
+                                &:hover {
+                                    background: #FFC940;
+                                }
     
                                 img {
                                     float: left;
@@ -400,7 +419,7 @@ main#article {
     
                                 span {
                                     float: left;
-                                    padding: 5px 0 0 0;
+                                    padding: 3px 0 0 0;
                                 }
     
                                 &:last-child {
@@ -465,10 +484,18 @@ main#article {
                             @media screen and (max-width: $medium) {
                                 display: none;
                             }
-    
-                            img {
-                                height: auto;
-                                max-width: 100%;
+
+                            svg {
+                                width: 100%;
+                            }
+
+                            path:hover {
+                                cursor: pointer;
+                                opacity: 1;
+                            }
+
+                            g.first:hover {
+                                opacity: 0.9;
                             }
                         }
 
@@ -519,14 +546,19 @@ main#article {
                             border-radius: 4px;
                             display: inline-block;
                             color: #25282B;
+                            font-family: 'Source Sans Pro', sans-serif;
                             font-size: 21px;
-                            font-weight: 600;
+                            font-weight: bold;
                             line-height: 24px;
                             margin: 24px 0 0 0;
                             padding: 16px 24px;
                             text-align: center;
                             text-decoration: none;
                             width: 336px;
+
+                            &:hover {
+                                background: #FFC940;
+                            }
 
                             @media screen and (max-width: $medium) {
                                 display: none;
@@ -675,6 +707,7 @@ footer {
 
             li {
                 float: left;
+                font-family: 'Source Sans Pro', sans-serif;
                 font-size: 18px;
                 list-style: none;
                 line-height: 28px;
